--- a/src/main/resources/static/css/manager_henshu.css
+++ b/src/main/resources/static/css/manager_henshu.css
@@ -1,4 +1,6 @@
-@charset "UTF-8";html, body, div, span, iframe,
+@charset "UTF-8";
+
+html, body, div, span, iframe,
 h1, h2, h3, h4, h5, h6, p, img, a,
 ol, ul, li,
 form, label,
