--- a/src/main/resources/static/css/manager_page.css
+++ b/src/main/resources/static/css/manager_page.css
@@ -22,6 +22,8 @@ table {
   border-collapse: collapse;
   width: 100%;
   table-layout: fixed;
+  width: auto;
+  text-align: center;
 }
 th,
 td {
@@ -29,13 +31,15 @@ td {
   text-align: center;
   border-bottom: 1px solid #ddd;
   font-weight: normal;
-  color: #583822;  
+  color: #583822; 
+   
 }
 th {
   font-weight: bolder;
   font-size: .875rem;
   color: #583822;
   background: #e6e6e6;
+  text-align: center;
 }
 img {
   width: 80px;
@@ -49,7 +53,8 @@ tr {
 }
 
 .A, 
-.C {
+.C,
+.E {
 	display: inline-block;
 	background: #e6e6e6;
 	padding: 5px 10px;
@@ -57,11 +62,144 @@ tr {
 	}
 
 .B,
-.D {
+.D,
+.F {
   display: none;
   background: #e6e6e6;
-	height: 100px;
+	/* height: 100px; */
 	}
 
+  .lo-tittle{
+    font-weight: bold;
+    margin-left: 145px;
+  }
+  /* 共通CSS */
+  .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 15px;
+  }
   
+  html {
+      min-height: 100%;
+      position: relative;
+  }
+  
+  .wrapper {
+      padding: 80px 0;
+      margin-bottom: 80px;
+  }
+  
+      .wrapper-title {
+          margin-bottom: 30px;
+          border-bottom: 1px solid #a2aab0;
+      }
+  
+      .wrapper-title h3{
+          font-size: 25px;
+          color: #3e3e3b;
+      }
+  
+      .wrapper-title p {
+          font-size: 13px;
+          color: #a2aab0;
+      }
+  
+  .btnds {
+      display: block;
+    padding: 0.8em 1em;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 100px;
+  }
+  .btn-box{
+    margin-top: 30px;
+  }
+  .btn:hover{
+      cursor: pointer;
+      opacity: .8;
+  }
+  
+  .btn-submit {
+      background-color: #4c586f;
+      color: #fff;
+      width: 40%;
+      margin: 0 auto;
+  }
+  
+  .btnds btn-submit {
+      color: #222222;
+  }
+  
+  /* login */
+  .login-wrapper {
+      text-align: center;
+      padding: 80px 0 ;
+  }
+      .login-wrapper-title {
+          margin-left: 50px;
+          margin-bottom: 30px;
+      }
+  
+      .login-wrapper-title h3{
+          font-size: 25px;
+          color: #3e3e3b;
+      }
+  
+      .login-wrapper-title p {
+          font-size: 12px;
+          color: #a2aab0;
+      }
+  
+  .login {
+      padding: 50px 0; 
+      width: 50%;
+      margin: 100px auto;
+      background-color: #ebeced;
+  }
+      .login-form {
+          width: 60%;
+          margin: 0 auto;
+      }
+  
+      .login-form input {
+          border: none;
+          width: 100%;
+          height: 25px;
+      }
+  
+      .login-form p {
+          text-align: left;
+      }
+  
+      .form-group {
+          margin-left: 145px;
+          margin-bottom: 5px;
+      }
+     
+  
+      .req {
+         font-size: 6px; 
+         background-color: #dc143c;
+         color: #fff;
+         padding: 3px;
+         border-radius: 7px;
+         margin-left: 2px;
+      }
+  
+      .row {
+         margin-top: 10px;
+      }
+  
+      input::placeholder,
+      textarea::placeholder {
+          opacity: 0.5;
+          color: #222222;
+      }
+  
+    .copyright {
+        position: absolute;
+        bottom: 0;
+      }    
+   
   
