--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -294,8 +294,8 @@
 								autocomplete="password" required>
 						</div>
 						<div class="btn-box">
-							<button type="submit" class="btnds btn-submit"
-								onclick="location.href='@{/oritabi/spot}'">登録</button>
+							<input type="submit" class="btnds btn-submit"
+							value="登録" onclick="location.href='@{/oritabi/spot}'">
 						</div>
 					</div>
 				</div>
