--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -247,7 +247,7 @@ $(function($){
 		<div class="button">
 			<!-- ▼▼▼ 以下修正ボタン（ひとつ前のページのリンク）▼▼▼ -->
 			<h3 class="shusei">
-				<button type="button" onclick="location.href='map.html'">修正する</button>
+				<button type="button" onclick="location.href='map'">修正する</button>
 			</h3>
 			<!-- ▲▲▲以上修正ボタン ▲▲▲-->
 
