--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -255,7 +255,7 @@
 						<div class="row">
 							<div class="form-group">
 								<p>
-									名前ooo<span class="req">必須</span>
+									名前<span class="req">必須</span>
 								</p>
 								<input id="name" type="text" class="validate" placeholder="山田"
 									th:field="*{name}" autocomplete="name" required>
