--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -341,7 +341,7 @@
             let selectedAddresses = [];
 		function setupMap1() {
             const locations = [
-            	<!--データベースから住所を取ってくる-->
+            	//データベースから住所を取ってくる
             	{ name: '大阪駅' },
                 { name: '京セラドーム' },
                 { name: '心斎橋駅' },
@@ -385,7 +385,7 @@
                 });
             });
 
-            <!--選び直すボタン-->
+            //<!--選び直すボタン-->
             const undoButton = document.getElementById('undoButton');
             undoButton.addEventListener('click', function() {
                 // リストから最後に選択された住所を削除
@@ -394,7 +394,7 @@
                 updateAddressList();
             });
 
-            <!--クリックした住所-->
+            //<!--クリックした住所-->
             function updateAddressList() {
                 const addressList = document.getElementById('selectedAddresses');
                 addressList.innerHTML = '<h3>　目的地の順番：</h3>' +
@@ -402,7 +402,7 @@
             }
         }
 		
-		<!--map2の処理-->
+		//<!--map2の処理-->
 		function setupMap2(map) {
 			// 出発地、目的地、ウェイポイントの設定
 			const directionsService = new google.maps.DirectionsService();
